--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "client": "cd client && npm run start",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^2.0.16"
+    }
 }
