--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "client": "cd client && npm run start",
+        "server": "nodemon server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -12,5 +13,12 @@
     "license": "ISC",
     "devDependencies": {
         "nodemon": "^2.0.16"
+    },
+    "dependencies": {
+        "@openzeppelin/contracts": "^4.7.0",
+        "aws-sdk": "^2.1154.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
+        "mongoose": "^6.4.4"
     }
 }
