--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,36 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "@thirdweb-dev/react": "^2.4.8",
+        "@thirdweb-dev/sdk": "^2.3.27",
+        "assert": "^2.0.0",
+        "autoprefixer": "^10.4.7",
+        "axios": "^0.27.2",
+        "browser-process": "^0.0.1",
+        "buffer": "^6.0.3",
+        "cipher-base": "^1.0.4",
+        "crypto-browserify": "^3.12.0",
+        "ethers": "^5.6.9",
         "history": "^4.6.3",
+        "https-browserify": "^1.0.0",
+        "os-browserify": "^0.3.0",
+        "prettier": "^2.7.1",
+        "process": "^0.11.10",
         "react": "^18.1.0",
+        "react-app-rewired": "^2.2.1",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "stream": "^0.0.2",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
